@startuml
title labyJeu


package moteurJeu {

interface Jeu{
+ init()
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
}


interface DessinJeu {
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}
}


package gameLaby {


class Labyrinthe{
  + murs : boolean[][]
  + getSuivant(x : int, y : int, action : String) : int[]
  + Labyrinthe(nom : String)
  + deplacerPerso(action : String)
  + etreFini() : boolean
  + getLengthY() : int
  + getLength() : int
  + getMur(x : int, y: int) : boolean
}
class Perso {
  x : int
  y : int
  + Perso(x : int, y : int)
  + etrePresent(dx : int, dy : int) : boolean
  + getX() : int
  + getY() : int
}

class LabyJeu{
+ init()
+ LabyJeu(nom : String)
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
+ getLaby(): Labyrinthe
}

class LabyDessin{
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}
}


LabyJeu "1" --> "1" Labyrinthe : -laby
DessinJeu <|.. LabyDessin
Jeu <|.. LabyJeu
Labyrinthe "1" --> "1" Perso: + pj
LabyJeu <. LabyDessin:uses

@enduml